force-app/main/default/objects/pse__Milestone__c/fields/CP_Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>CP_Total_Costs__c</fullName>
    <formula>CT_Total_Submitted_Hours_Bill_Rate__c + pse__Billable_Expenses_In_Financials__c
+ pse__Non_Billable_Expenses_In_Financials__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>