force-app/main/default/objects/pse__Milestone__c/fields/CT_Actual_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Actual_Recovery_Rate__c</fullName>
    <formula>IF( (CT_Total_Submitted_Hours_Bill_Rate__c == 0 || pse__Milestone_Amount__c ==0),0,( pse__Milestone_Amount__c/ CT_Total_Submitted_Hours_Bill_Rate__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Recovery Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>