force-app/main/default/objects/pse__Milestone__c/fields/CT_Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>CT_Assigned_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>DLRS populates this field</description>
    <inlineHelpText>Total Planned hours of all related assignments</inlineHelpText>
    <label>Assigned Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>