force-app/main/default/objects/pse__Milestone__c/fields/CT_Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>CT_Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only onboarded accounts can be selected.</errorMessage>
        <filterItems>
            <field>Account.Is_Onboarded__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only onboarded accounts can be selected.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Milestones (Billing Account)</relationshipLabel>
    <relationshipName>Milestones1</relationshipName>
    <type>Lookup</type>
</CustomField>