force-app/main/default/objects/pse__Milestone__c/fields/CT_Manual_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Manual_Recovery_Rate__c</fullName>
    <label>Manual Recovery Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>