force-app/main/default/objects/pse__Milestone__c/fields/CT_Original_Budget_Recovery_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Original_Budget_Recovery_Rate__c</fullName>
    <formula>IF(Original_Budget__c ==0,0,(Original_Planned_Fee__c /  Original_Budget__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Budget Recovery Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>