force-app/main/default/objects/pse__Milestone__c/fields/CT_Percent_Complete_Budget__c.field-meta.xml
<CustomField>
    <fullName>CT_Percent_Complete_Budget__c</fullName>
    <formula>CT_Total_Submitted_Hours_Bill_Rate__c /  pse__Milestone_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>