force-app/main/default/objects/pse__Milestone__c/fields/CT_Recognisable_Value__c.field-meta.xml
<CustomField>
    <fullName>CT_Recognisable_Value__c</fullName>
    <formula>IF( CT_Manual_Recovery_Rate__c &gt; 0, CT_Manual_Recovery_Rate__c *  CT_Total_Submitted_Hours_Bill_Rate__c ,
(IF( CP_Complete__c &gt; 1,1,CP_Complete__c * pse__Milestone_Amount__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recognisable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>