force-app/main/default/objects/pse__Milestone__c/fields/CT_Requested_Hours__c.field-meta.xml
<CustomField>
    <fullName>CT_Requested_Hours__c</fullName>
    <description>DLRS populates this field</description>
    <inlineHelpText>Total Planned hours of all related unassigned Resource Requests</inlineHelpText>
    <label>Requested Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>