force-app/main/default/objects/pse__Milestone__c/fields/CT_Total_Submitted_Hours_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>CT_Total_Submitted_Hours_Bill_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The total of the submitted hours * the Cost Rate</inlineHelpText>
    <label>Total Submitted Hours * Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>