force-app/main/default/objects/pse__Milestone__c/fields/ffrrRecognizedToDate__c.field-meta.xml
<CustomField>
    <fullName>ffrrRecognizedToDate__c</fullName>
    <label>Recognized To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>