force-app/main/default/objects/pse__Milestone__c/fields/ffrrStartDate__c.field-meta.xml
<CustomField>
    <fullName>ffrrStartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>