force-app/main/default/objects/pse__Milestone__c/fields/Milestone_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Fee_Amount__c</fullName>
    <label>Milestone Calculated Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>