force-app/main/default/objects/pse__Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
            <value>
                <fullName>Fixed Price - Time-based</fullName>
                <default>true</default>
                <label>Fixed Price - Time-based</label>
            </value>
            <value>
                <fullName>Fixed Price - Bill Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>