force-app/main/default/objects/pse__Milestone__c/fields/Original_Budget__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget__c</fullName>
    <label>Original Budget Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>