force-app/main/default/objects/pse__Milestone__c/fields/Original_Planned_Fee__c.field-meta.xml
<CustomField>
    <fullName>Original_Planned_Fee__c</fullName>
    <label>Original Planned Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>