force-app/main/default/objects/pse__Milestone__c/fields/OwnerCompany_Name__c.field-meta.xml
<CustomField>
    <fullName>OwnerCompany_Name__c</fullName>
    <formula>pse__Project__r.pse__Practice__r.ffpsai__OwnerCompany__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerCompany Name</label>
    <type>Text</type>
</CustomField>