force-app/main/default/objects/pse__Milestone__c/fields/Project_Access__c.field-meta.xml
<CustomField>
    <fullName>Project_Access__c</fullName>
    <label>Project Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public access</fullName>
            </value>
            <value>
                <fullName>Public access with restrictions</fullName>
            </value>
            <value>
                <fullName>VIP Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>