force-app/main/default/objects/pse__Milestone__c/fields/Recalculate_Access__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Access</label>
    <type>Checkbox</type>
</CustomField>