force-app/main/default/objects/pse__Milestone__c/fields/Recovery_rate__c.field-meta.xml
<CustomField>
    <fullName>Recovery_rate__c</fullName>
    <formula>IF( Milestone_Fee_Amount__c  ==0,0,( pse__Milestone_Amount__c / Milestone_Fee_Amount__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Recovery rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>