force-app/main/default/objects/pse__Milestone__c/listViews/All_Milestone_Current_Month.listView-meta.xml
<ListView>
    <fullName>All_Milestone_Current_Month</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Milestone Current Month</label>
</ListView>