force-app/main/default/objects/pse__Milestone__c/listViews/psaws__Overdue_Billable_Milestones.listView-meta.xml
<ListView>
    <fullName>psaws__Overdue_Billable_Milestones</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Target_Date__c</columns>
    <columns>pse__Milestone_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Actual_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>pse__Target_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>pse__Milestone_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Exclude_from_Billing__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>pse__Billing_Hold__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Overdue Milestones</label>
</ListView>