force-app/main/default/objects/pse__Milestone__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Transaction__c</columns>
    <columns>pse__Milestone_Amount__c</columns>
    <columns>pse__Milestone_Cost__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Target_Date__c</columns>
    <columns>pse__Actual_Date__c</columns>
    <columns>pse__Requires_Customer_Sign_off__c</columns>
    <columns>pse__Recognition_Method__c</columns>
    <columns>Milestone_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ffpsai__ServicesProduct__c</columns>
    <columns>Recurring__c</columns>
    <columns>Milestone_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>